<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GHOST!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game_screen">GameScreenActivity</string>
    <string name="Player1">Player 1</string>
    <string name="Ghost">GHOST</string>
    <string name="Player2">Player 2</string>
    <string name="Player3">Player 3</string>
    <string name="Player4">Player 4</string>
    <string name="Submit">Submit</string>
    <string name="Challenge">Challenge</string>
    <string name="DefaultWord">WORD</string>
    <string name="DefaultLetter">A</string>
    <string name="LocalGame">Local Game</string>
    <string name="P2PGame">P2P GAME</string>
    <string name="Rules">Rules</string>
    <string name="StartTurn">Begin!</string>
    <string name="title_activity_player_selection_screen">PlayerSelectionScreenActivity</string>
    <string name="Language">Language</string>
    <string name="StartGame">Start Game</string>
    <string name="GHOST">GHOST!</string>
    <string name="title_activity_challenge">ChallengeActivity</string>
    <string name="Backspace">Backspace</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="NewGame">New Game</string>
    <string name="zerozero">00</string>
    <string name="TIME">TIME:</string>
    <string name="title_activity_rules">RulesActivity</string>
    <string name="Back">BACK</string>

    <string name="RulesTitle">Ghost is an epic word game of strategy and lexicographical knowledge.</string>
    <string name="RulesPlayerTurns">Turns</string>
    <string name="Rules1">Players take turns adding letters to the end of a word fragment.
                          Unlike typical word games, the goal is to NOT finish a word greater than 3 letters in length.
                          As with the basketball shooting games of "HORSE" and "PIG," players are assigned letters of the word "GHOST" if they complete
                          a word. When a player earns the word "GHOST," they are eliminated from the game. The last player remaining wins!</string>
    <string name="RulesChallenges">Challenges</string>
    <string name="Rules2">A player has the option to challenge the previous player if they think that the previous player is bluffing. When a player is challenged, they must be able to
                          create a word using the current word fragment. If the player fails to create a word, they receive a letter, but if the
                          player is able to create a word, the player who challenged them receives a letter.</string>
    <string name="RulesAck">Acknowledgements</string>
    <string name="Rules3">Background images derived from images of space: Courtesy NASA/JPL-Caltech \n The Android robot is reproduced or modified
                          from work created and shared by Google and used according to terms described in the Creative Commons 3.0 Attribution License. \n The Enhanced North American Benchmark LExicon (Enable) public domain list is used to validate words. </string>

</resources>
