<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeScreenActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            style="@style/standard_button"
            android:background="@drawable/letterbutton"
            android:text="@string/LocalGame"
            android:id="@+id/buttonLocalGame"
            android:layout_gravity="center_horizontal"
            android:textColor="#000"
            android:layout_width="150dp" />

        <Button
            style="@style/standard_button"
            android:background="@drawable/letterbutton"
            android:text="@string/P2PGame"
            android:id="@+id/buttonP2PGame"
            android:layout_gravity="center_horizontal"
            android:textColor="#000"
            android:layout_width="150dp"
            android:layout_marginBottom="25dp" />

        <Button
            style="@style/standard_button"
            android:background="@drawable/letterbutton"
            android:text="@string/Rules"
            android:id="@+id/buttonRules"
            android:layout_gravity="center_horizontal"
            android:textColor="#000"
            android:layout_width="150dp" />
    </LinearLayout>
</RelativeLayout>
