<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hooversmithmobileinnovations.ghost.RulesActivity"
    android:background="@drawable/test3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Rules"
        android:id="@+id/textViewRules"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="60sp"
        android:textColor="#ffffff" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/HlinearLayout7">

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/Back"
            android:id="@+id/buttonBack"
            style="@style/standard_button_rulessscreen_portrait"
            android:background="@drawable/letterbutton"
            android:layout_below="@+id/textViewRules"
            android:layout_centerHorizontal="true" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textViewRules"
        android:layout_above="@+id/HlinearLayout7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollViewRules"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText"
                    android:text="@string/Rules1"
                    android:textColor="#ff4eff0c"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Rules2"
                    android:textColor="#ffff26b0"
                    android:id="@+id/editText2"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Thanks NASA / Google Robot"
                    android:textColor="#ffff26b0"
                    android:id="@+id/textView2"
                    android:gravity="center_horizontal" />


            </LinearLayout>

        </ScrollView>



    </RelativeLayout>
</RelativeLayout>
