<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hooversmithmobileinnovations.ghost.GameScreenActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal">


            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button7" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal" >

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            >

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/button_text"
                android:background="@drawable/letterbutton"
                android:text="A"
                android:id="@+id/button27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Player1"
                android:layout_weight="1"
                android:id="@+id/textView"
                android:background="@drawable/grid"
                android:textSize="18sp"
                android:textColor="#000"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ghost"
                android:id="@+id/textView2"
                android:background="@drawable/grid"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="#000"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Player2"
                android:background="@drawable/grid"
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="#000"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ghost"
                android:background="@drawable/grid"
                android:id="@+id/textView4"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="#000"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="4" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Player3"
                android:layout_weight="1"
                android:id="@+id/textView5"
                android:background="@drawable/grid"
                android:textSize="18sp"
                android:textColor="#000"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ghost"
                android:id="@+id/textView6"
                android:layout_weight="1"
                android:background="@drawable/grid"
                android:textSize="18sp"
                android:textColor="#000"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Player4"
                android:id="@+id/textView7"
                android:background="@drawable/grid"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="#000"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ghost"
                android:id="@+id/textView8"
                android:background="@drawable/grid"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="#000"
                android:gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="WORD"
        android:id="@+id/textView9"
        android:textSize="60sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:gravity="center_horizontal"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="82dp"
        android:textColor="#000" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            style="@style/button_text"
            android:background="@drawable/letterbutton"
            android:text="Submit"
            android:id="@+id/button20"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="20sp"
            android:padding="7dp"
            android:layout_width="130dp"
            android:textColor="#000" />

        <Button
            style="@style/button_text"
            android:background="@drawable/letterbutton"
            android:text="Challenge"
            android:id="@+id/button28"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="20sp"
            android:padding="7dp"
            android:layout_width="130dp"
            android:textColor="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="A"

            android:id="@+id/textView10"
            android:textSize="40sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="0dp"
            android:paddingBottom="15dp"
            android:textStyle="bold"
            android:textColor="#ffff050e" />
    </RelativeLayout>

</RelativeLayout>
